This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Resource is not released before returning from the function
Type: resource usage Stage: test needed
Components: Versions:
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: barry Nosy List: Suman.Saha, barry, python-dev, vstinner
Priority: normal Keywords:

Created on 2011-09-20 14:58 by Suman.Saha, last changed 2022-04-11 14:57 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
python_patch9 Suman.Saha, 2011-09-20 14:58 Patch review
Messages (4)
msg144338 - (view) Author: Suman Saha (Suman.Saha) Date: 2011-09-20 14:58
Something that is allocated using PyUnicode_DecodeFSDefault is not freed on one error path.
msg144340 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2011-09-20 16:35
It's not me, it's Barry! (PEP 3147: 7b69e630d237)
msg144344 - (view) Author: Barry A. Warsaw (barry) * (Python committer) Date: 2011-09-20 18:06
Suman, good eye, confirmed!  Thanks for the patch, I'll commit this to 3.2 and 3.3.
msg144348 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2011-09-20 18:58
New changeset 7a48e98915f2 by Barry Warsaw in branch '3.2':
- Issue #13021: Missing decref on an error path.  Thanks to Suman Saha for
http://hg.python.org/cpython/rev/7a48e98915f2

New changeset ad0804d3dbd0 by Barry Warsaw in branch 'default':
- Issue #13021: Missing decref on an error path.  Thanks to Suman Saha for
http://hg.python.org/cpython/rev/ad0804d3dbd0
History
Date User Action Args
2022-04-11 14:57:21adminsetgithub: 57230
2011-09-20 19:17:43barrysetstatus: open -> closed
resolution: fixed
2011-09-20 18:58:41python-devsetnosy: + python-dev
messages: + msg144348
2011-09-20 18:43:39barrysettitle: Resource is not released before returning from the functiion -> Resource is not released before returning from the function
2011-09-20 18:06:29barrysetassignee: barry
messages: + msg144344
2011-09-20 16:35:26vstinnersetnosy: + barry
messages: + msg144340
2011-09-20 15:07:21ezio.melottisetstage: patch review -> test needed
2011-09-20 15:06:21ezio.melottisetnosy: + vstinner

stage: patch review
2011-09-20 14:58:12Suman.Sahacreate