- Issue #13021: Missing decref on an error path.  Thanks to Suman Saha for   finding the bug and providing a patch.